# project-chimera-agentic-influencer-network

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Dockerfile  Makefile  Project Chimera SRS Document_ Autonomous Influencer Network.md  Project_Chimera_3Day_Challenge.md.md  README.md  pyproject.toml
.github/workflows/: main.yml
chimera/: __init__.py
deliverables/: architecture_strategy.md  summary_doc.tex
docker/: docker-compose.dev.yml
research/: tooling_strategy.md
skills/: README.md  __init__.py
specs/: _meta.md  error_handling.md  functional.md  heartbeat.md  memory.md  openclaw_integration.md  personas.md  security.md  technical.md
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
